--- a/vee.html
+++ b/vee.html
@@ -499,7 +499,7 @@
 
     <nav>
         <ul>
-            <li><a href="https://blitzdigitalmkt.github.io/dandysworldbernardo/">Início</a></li>
+            <li><a href="https://blitzdigitalmkt.github.io/dandysworldbernardo">Início</a></li>
             <li><a href="#sobre">Sobre</a></li>
             <li><a href="#historia">História</a></li>
             <li><a href="#habilidades">Habilidades</a></li>
